<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/welcome"
        android:textSize="@dimen/big_text_size" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/nice_to_see"
        android:textColor="@color/gray"
        android:textSize="@dimen/big_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeList"
            android:layout_width="match_parent"
            android:text="@string/list"
            android:gravity="center"
            android:background="@drawable/shape_button"
            android:layout_height="match_parent"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/white"
            />
    </LinearLayout>
</RelativeLayout>