<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:paddingStart="5dp"
            android:textColor="@color/red"
            android:text="@string/back"
            android:textSize="@dimen/middle_text_size" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/profile"
            android:textSize="@dimen/big_text_size" />
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:textSize="@dimen/middle_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profileLogOut"
            android:layout_width="match_parent"
            android:text="@string/log_out"
            android:gravity="center"
            android:background="@drawable/shape_button"
            android:layout_height="match_parent"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@color/white"
            />
    </LinearLayout>
</RelativeLayout>